--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
   <title>Hello Vue</title>
 </head>
 <body>
-  <!--We'll be adding stuff here!-->
+	<script src="https://unpkg.com/vue/dist/vue.js"></script>
+  	<div id="app">
+  	  {{ message }}
+  	  <!--Renders as "Hello World"-->
+  	</div>
+  	<script>
+  	  new Vue({
+  	    el: '#app',
+  	    data: {
+  	      message: 'Hello World'
+  	    }
+  	  });
+  	</script>
+
 </body>
 </html>
