--- a/index.html
+++ b/index.html
@@ -7,18 +7,26 @@
 </head>
 <body>
 	<script src="https://unpkg.com/vue/dist/vue.js"></script>
+
+
+
   	<div id="app">
-  	  {{ message }}
-  	  <!--Renders as "Hello World"-->
+  	  <h3>Grocery list</h3>
+  	  <ul>
+  	    <li v-for="grocery in groceries">{{ grocery }}</li>
+  	  </ul>
   	</div>
   	<script>
-  	  new Vue({
+  	  var app = new Vue({
   	    el: '#app',
   	    data: {
-  	      message: 'Hello World'
+  	      groceries: [ 'Bread', 'Milk' ]
   	    }
   	  });
   	</script>
+
+
+
 
 </body>
 </html>
