--- a/index.html
+++ b/index.html
@@ -20,9 +20,13 @@
   	  var app = new Vue({
   	    el: '#app',
   	    data: {
-  	      groceries: [ 'Bread', 'Milk' ]
+  	      groceries: [ 'Bread', 'Milk','Juce' ]
   	    }
   	  });
+  	  setTimeout(function() {
+  	    app.groceries.push('Apple');
+  	  }, 2000);
+
   	</script>
 
 
